assets/css/main.scss
---
# Only the main Sass file needs front matter (the dashes are enough)
---

// System fonts
@import "system-font-css/_system-font";

// Custom variables and variable overwrites.
@import "theme/variables";

// Import default variables and available mixins.
@import "uikit/variables-theme";
@import "uikit/mixins-theme";

// Custom mixin overwrites.
@import "theme/mixins";

// Import UIkit.
@import "theme/uikit";

// Other vendor styles
@import "syntax-highlighting/github";

// Comment forms
@import "comments/comments";
@import "comments/forms";

.uk-alert-primary {
    background: lighten(mix(white, #32d296, 40%), 25%);
}


.anchorjs-link {
  display: inline-block;
  height: 32px;
  margin-top: 4px;
  margin-left: -1.4em !important;
}
.anchorjs-link:after {
  margin-left: 7px;
  margin-top: -4px;
  display: block;
}


body > div.uk-lightbox.uk-overflow-hidden.uk-lightbox-panel.uk-open > div.uk-lightbox-toolbar.uk-lightbox-caption.uk-position-bottom.uk-text-center.uk-transition-slide-bottom.uk-transition-opaque
.lb-data .lb-details {
    text-align: right;
}

 
.uk-table th {
  vertical-align: top !important;
}

